# sample-django

./: README.md  docker-compose.yml  manage.py  pyproject.toml
.circleci/: config.yml
polls/migrations/: 0001_initial.py
polls/tests/: test_bar.py  test_foo.py
sample_django/: asgi.py  settings.py  urls.py  wsgi.py
